<resources>
    <string name="app_name" translatable="false">Aria2App</string>
    <string name="title_activity_main_settings">Settings</string>
    <string name="title_activity_select_profile">Aria2App - Profiles</string>
    <string name="title_activity_addProfile_new">Aria2App - New profile</string>
    <string name="title_activity_addProfile_edit">Aria2App - Edit profile</string>
    <string name="title_activity_logs" translatable="false">Aria2App - Logs</string>
    <string name="title_activity_terminal" translatable="false">Aria2App - Terminal</string>
    <string name="nv_websocket_client_license" translatable="false"><a>https://github.com/TakahikoKawasaki/nv-websocket-client</a></string>
    <string name="androidTreeView_details" translatable="false"><a>https://github.com/bmelnychuk</a></string>
    <string name="mpAndroidChart_details" translatable="false">Copyright 2016 Philipp Jahoda</string>
    <string name="downloadStatus_waiting">Waiting in queue</string>
    <string name="downloadStatus_error">Error</string>
    <string name="downloadStatus_paused">Paused</string>
    <string name="downloadStatus_unknown">Unknown</string>
    <string name="downloadStatus_complete">Complete</string>
    <string name="downloadStatus_removed">Removed</string>
    <string name="downloadStatus_active">Active</string>
    <string name="completed_length">Completed length: %1$s</string>
    <string name="total_length">Total length: %1$s</string>
    <string name="uploaded_length">Uploaded length: %1$s</string>
    <string name="pieces">Pieces: %1$d</string>
    <string name="pieces_length">Piece length: %1$s</string>
    <string name="connections">Uploaded length: %1$d</string>
    <string name="gid" translatable="false">GID: %1$s</string>
    <string name="seeder">Seeder: %1$s</string>
    <string name="info_hash" translatable="false">InfoHash: %1$s</string>
    <string name="numSeeder">Seeders number: %1$d</string>
    <string name="creation_date">Creation date: %1$s</string>
    <string name="mode">Mode: %1$s</string>
    <string name="comment">Comment: %1$s</string>
    <string name="index" translatable="false">Index: %1$d</string>
    <plurals name="announceList">
        <item quantity="zero">Announce list: empty</item>
        <item quantity="one">Announce list: %1$s</item>
    </plurals>
    <string name="selectFile">Download file</string>
    <string name="selectFileNotPaused">Download file (available only when download is paused)</string>
    <string name="selectFileNotTorrent">Download file (available only on BitTorrent downloads)</string>
    <string name="selectFileSingleFile">Download file (not available on single file downloads)</string>
    <string name="selectDirectory">Download files in directory</string>
    <string name="selectDirectoryNotPaused">Download files in directory (available only when download is paused)</string>
    <string name="selectDirectoryNotTorrent">Download files in directory (available only on BitTorrent downloads)</string>
    <string name="selectDirectorySingleFile">Download files in directory (not available on single file downloads)</string>
    <string name="notificationComplete">Download completed!</string>
    <string name="notificationStarted">New download started!</string>
    <string name="notificationStopped">Download stopped!</string>
    <string name="notificationPaused">Download paused!</string>
    <string name="notificationError">Got error on download!</string>
    <string name="notificationBTComplete">BitTorrent download completed!</string>
    <string name="serverOffline">This server is actually offline. Would you like to use it anyway?</string>
    <string name="downloadNotComplete">This file\'s download is not complete yet! Do you want to download it to this device anyway?</string>
    <string name="downloadCompleted">Download completed!</string>
    <string name="downloadFailed">Download failed!</string>
    <string name="copiedClipboard">Copied to clipboard!</string>
    <string name="logsDeleted">All logs deleted!</string>
    <string name="unknown_download">Unknown download!</string>
    <string name="unknown_profile">Unknown profile</string>
    <string name="profile">Profile name:</string>
    <string name="updateOptions">Update options\' source file</string>
    <string name="updateOptions_summary">That file contains information about options.</string>
    <string name="unknown">Unknown</string>
    <string name="loading_downloads">Loading downloads. Please wait…</string>
    <string name="downloading_file">Downloading file…</string>
    <string name="gathering_information">Gathering information. Please wait…</string>
    <string name="processing_data">Processing some data. Please wait…</string>
    <string name="imei_box">The application need to access your phone state to retrieve information to check the license. A message box will display now.</string>
    <string name="profile_help">Aria2App uses the aria2 JSON-RPC interface! Only token method authentication is supported. See <a>https://aria2.github.io/manual/en/html/aria2c.html#rpc-interface</a> for more!</string>
    <string name="profile_hint">My profile</string>
    <string name="mode_single">Single mode (use same address for every connection)</string>
    <string name="mode_multi">Multi mode (use different addresses for different connectivity situations)</string>
    <string name="address">Address:</string>
    <string name="address_hint" translatable="false">127.0.0.1</string>
    <string name="port">Port:</string>
    <string name="move_up">Move up in queue</string>
    <string name="move_down">Move down in queue</string>
    <string name="port_hint" translatable="false">6800</string>
    <string name="endpoint" translatable="false">RPC endpoint:</string>
    <string name="endpoint_default" translatable="false">/jsonrpc</string>
    <string name="completeURL_default" translatable="false">http://127.0.0.1:6800/jsonrpc</string>
    <string name="authentication">Authentication:</string>
    <string name="token" translatable="false">Token:</string>
    <string name="token_hint" translatable="false">mytoken</string>
    <string name="send">Send</string>
    <string name="filters">Filters</string>
    <string name="method" translatable="false">Method:</string>
    <string name="jsonrpc" translatable="false">JSONRPC:</string>
    <string name="jsonrpc_version" translatable="false">2.0</string>
    <string name="id" translatable="false">ID:</string>
    <string name="id_hint">Empty for random</string>
    <string name="encryption">Enable TLS/SSL encryption</string>
    <string name="json" translatable="false">JSON:</string>
    <string name="json_hint" translatable="false">{\"id\": \"qwer\", \"jsonrpc\": \"2.0\", \"method\": \"aria2.getVersion\", \"params\": []}</string>
    <string name="params" translatable="false">Params:</string>
    <string name="params_hint">JSON formatted params</string>
    <string name="clear_history">Clear history</string>
    <string name="adv_mode">Advanced mode</string>
    <string name="basic_mode">Basic mode</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="uris" translatable="false">URIs</string>
    <string name="_default" translatable="false">Default</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="change">Change</string>
    <string name="options">Options</string>
    <string name="addURI">Add new URI</string>
    <string name="position">Queue position:</string>
    <string name="pickTorrent">Pick a Torrent file</string>
    <string name="pickMetalink">Pick a Metalink file</string>
    <string name="addURIs_help">All URIs must point to the same resource otherwise the download may fail or be corrupted without aria2 complaining.</string>
    <string name="addURIs_torrentHelp">URIs are used for Web-seeding. For single file torrents, the URI can be a complete URI pointing to the resource; if URI ends with /, name in torrent file is added. For multi-file torrents, name and path in torrent are added to form a URI for each file.</string>
    <string name="zero" translatable="false">0</string>
    <string name="uri" translatable="false">URI</string>
    <string name="torrent" translatable="false">Torrent</string>
    <string name="enableDirectDownload">Enable DirectDownload</string>
    <string name="directDownload_authHelp">Authentication example: <a>https://gist.github.com/fxsjy/5465353</a></string>
    <string name="directDownload_help">DirectDownload provide the possibility to directly download files from the aria2 server to your device with a single tap! You just need an appropriate webserver configuration. For example: <a>https://docs.python.org/2/library/simplehttpserver.html</a></string>
    <string name="directDownload_addrHint" translatable="false">http://127.0.0.1:6801/</string>
    <string name="directDownload_addrHelp">The address should be pointing to a directory listing of the aria2 download directory.</string>
    <string name="username" translatable="false">Username:</string>
    <string name="directDownload_usernameHint" translatable="false">myusername</string>
    <string name="password" translatable="false">Password:</string>
    <string name="directDownload_passwordHint" translatable="false">mypassword</string>
    <string name="general">General</string>
    <string name="hideLinkedMetadata">Hide linked meta-data</string>
    <string name="visibleMetadata">Linked meta-data visible</string>
    <string name="hiddenMetadata">Linked meta-data hidden</string>
    <string-array name="updateRate">
        <item>1 sec</item>
        <item>2 sec</item>
        <item>3 sec</item>
        <item>4 sec</item>
        <item>5 sec</item>
    </string-array>
    <string name="updateRateSummary">Refreshing timeout in seconds</string>
    <string name="reloadList">Reload list rate</string>
    <string name="reloadListSummary">Reloading timeout of the download list in seconds</string>
    <string name="forceAction">Force action if it fails</string>
    <string name="forceActionOn">If action on download fails, we\'ll try to force it</string>
    <string name="forceActionOff">If action on download fails, we\'re going to do nothing</string>
    <string name="notifications">Notifications</string>
    <string name="enableNotifications">Enable notification service</string>
    <string name="notificationsOn">Notifications are enabled</string>
    <string name="notificationsOff">Notifications are disabled</string>
    <string name="notificationType">Notification type</string>
    <string name="notificationTypeSummary">Select which type of notifications to receive</string>
    <string name="enableSound">Enabled sound</string>
    <string name="soundOn">Sound is enabled</string>
    <string name="soundOff">Sound is disabled</string>
    <string name="enablePersistent">Enable persistent notification service</string>
    <string name="persistentOn">Notification service will never go off</string>
    <string name="persistentOff">Notification service may not be live or may go off</string>
    <string name="others">Others</string>
    <string name="logs">Log files</string>
    <string name="logsSummary">All application\'s log files</string>
    <string name="third_part">Third-part projects</string>
    <string name="about_app">About this application</string>
    <string name="tracking">Disable anonymous statistics</string>
    <string name="trackingOn">No statistics will be sent to the developer.</string>
    <string name="trackingOff">Statistics about the application behavior will be sent to the developer. (No personal data will be sent)</string>
    <string name="app_version">Application version</string>
    <string name="developer">Developer: Gianlu (Report bugs or any suggestion)</string>
    <string name="email" translatable="false">altomanigianluca@gmail.com</string>
</resources>