<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/general">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="a2_hideMetadata"
            android:summaryOff="@string/visibleMetadata"
            android:summaryOn="@string/hiddenMetadata"
            android:title="@string/hideLinkedMetadata" />

        <ListPreference
            android:defaultValue="2"
            android:entries="@array/updateRate"
            android:entryValues="@array/updateRateValue"
            android:key="a2_updateRate"
            android:summary="@string/updateRateSummary"
            android:title="@string/updateRate" />

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/downloadListUpdateRate"
            android:entryValues="@array/downloadListUpdateRateValue"
            android:key="a2_downloadListRate"
            android:summary="@string/reloadListSummary"
            android:title="@string/reloadList" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="a2_forceAction"
            android:summaryOff="@string/forceActionOff"
            android:summaryOn="@string/forceActionOn"
            android:title="@string/forceAction" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/notifications">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="a2_enableNotifications"
            android:summaryOff="@string/notificationsOff"
            android:summaryOn="@string/notificationsOn"
            android:title="@string/enableNotifications" />

        <MultiSelectListPreference
            android:defaultValue="@array/selectedNotificationsValue"
            android:dependency="a2_enableNotifications"
            android:entries="@array/selectedNotifications"
            android:entryValues="@array/selectedNotificationsValue"
            android:key="a2_selectedNotifications"
            android:summary="@string/notificationTypeSummary"
            android:title="@string/notificationType" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="a2_enableNotifications"
            android:key="a2_enableSound"
            android:summaryOff="@string/soundOff"
            android:summaryOn="@string/soundOn"
            android:title="@string/enableSound" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="a2_enableNotifications"
            android:key="a2_enablePersistent"
            android:summaryOff="@string/persistentOff"
            android:summaryOn="@string/persistentOn"
            android:title="@string/enablePersistent" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/directDownload">
        <EditTextPreference
            android:key="dd_downloadPath"
            android:summary="@string/dd_downloadPath_summary"
            android:title="@string/dd_downloadPath" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/others">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="a2_runVersionCheckAtStartup"
            android:summaryOff="@string/disabledVersionCheck"
            android:summaryOn="@string/enabledVersionCheck"
            android:title="@string/versionCheck" />

        <Preference
            android:key="logs"
            android:summary="@string/logsSummary"
            android:title="@string/logs" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/third_part">
        <Preference
            android:key="nv-websocket-client"
            android:summary="@string/apacheLicense"
            android:title="nv-websocket-client" />
        <Preference
            android:key="mpAndroidChart"
            android:summary="@string/apacheLicense"
            android:title="MPAndroidChart" />
        <Preference
            android:key="fileDownloader"
            android:summary="@string/apacheLicense"
            android:title="FileDownloader" />
        <Preference
            android:key="apacheLicense"
            android:title="Apache License 2.0" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/about_app">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="a2_trackingDisable"
            android:summaryOff="@string/trackingOff"
            android:summaryOn="@string/trackingOn"
            android:title="@string/tracking" />
        <Preference
            android:key="donate"
            android:summary="@string/donateSummary"
            android:title="@string/donate" />
        <Preference
            android:key="app_version"
            android:title="@string/app_version" />
        <Preference
            android:key="email"
            android:summary="@string/email"
            android:title="@string/developer" />
    </PreferenceCategory>

</PreferenceScreen>