<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="a2_enableNotifications"
        android:summaryOff="@string/notificationsOff"
        android:summaryOn="@string/notificationsOn"
        android:title="@string/enableNotifications" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:dependency="a2_enableNotifications"
        android:key="a2_enableNotificationsAtBoot"
        android:summaryOff="@string/notificationsAtBootOff"
        android:summaryOn="@string/notificationsAtBootOn"
        android:title="@string/enableNotificationsAtBoot" />

    <MultiSelectListPreference
        android:defaultValue="@array/selectedNotificationsValue"
        android:dependency="a2_enableNotifications"
        android:entries="@array/selectedNotifications"
        android:entryValues="@array/selectedNotificationsValue"
        android:key="a2_selectedNotifications"
        android:summary="@string/notificationTypeSummary"
        android:title="@string/notificationType" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:dependency="a2_enableNotifications"
        android:key="a2_enableSound"
        android:summaryOff="@string/soundOff"
        android:summaryOn="@string/soundOn"
        android:title="@string/enableSound" />
</PreferenceScreen>