<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
    <header
        android:fragment="com.gianlu.aria2app.PreferencesActivity$GeneralFragment"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/general" />

    <header
        android:fragment="com.gianlu.aria2app.PreferencesActivity$DirectDownloadFragment"
        android:icon="@drawable/baseline_cloud_download_24"
        android:title="@string/directDownload" />

    <header
        android:fragment="com.gianlu.aria2app.PreferencesActivity$NotificationsFragment"
        android:icon="@drawable/baseline_sms_24"
        android:title="@string/notifications" />

    <header
        android:fragment="com.gianlu.aria2app.PreferencesActivity$ThirdPartFragment"
        android:icon="@drawable/baseline_extension_24"
        android:title="@string/third_part" />

    <header
        android:icon="@drawable/baseline_announcement_24"
        android:title="@string/logs" />

    <header
        android:fragment="com.gianlu.aria2app.PreferencesActivity$AboutFragment"
        android:icon="@drawable/baseline_info_24"
        android:title="@string/about_app" />
</preference-headers>
