<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id" />

        <EditText
            android:id="@+id/createRequestDialog_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/id_hint"
            android:inputType="textVisiblePassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jsonrpc" />

        <EditText
            android:id="@+id/createRequestDialog_jsonrpc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/jsonrpc_version"
            android:inputType="textVisiblePassword"
            android:text="@string/jsonrpc_version" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/method" />

        <EditText
            android:id="@+id/createRequestDialog_method"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/method_hint"
            android:inputType="textVisiblePassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/params" />

        <EditText
            android:id="@+id/createRequestDialog_params"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/params_hint"
            android:inputType="textVisiblePassword" />
    </LinearLayout>

    <TextView
        android:id="@+id/createRequestDialog_json"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="bold" />
</LinearLayout>